[project]
name = "driviz"
version = "0.6.1"
description = "Data Visualization Library containing the Dribia Theme."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
authors = [{ name = "Dribia Data Research", email = "code@dribia.com" }]
maintainers = [{ name = "Dribia Data Research", email = "code@dribia.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "altair>=5.5.0,<7",
  "cycler>=0.12.1,<0.13",
  "matplotlib>=3.9.2,<4",
  "numpy>=1.26,<3.0",
  "pydantic>=2.9.0,<3",
  "pydantic-extra-types>=2.10.0,<3",
  "vl-convert-python==1.8.0",
]

[project.urls]
Homepage = "https://github.com/dribia/driviz"
Repository = "https://github.com/dribia/driviz"

[dependency-groups]
dev = [
  "deptry==0.25.1",
  "prek>=0.3.9,<1",
]
ci = [
  "setuptools>=80.9.0,<83",
]
docs = [
  "jinja2>=3.1.6,<4",
  "mike>=2.1.3,<3",
  "mkdocs>=1.5.3,<2",
  "mkdocs-charts-plugin>=0.0.13,<0.0.14",
  "mkdocs-material>=9.6.14,<10",
  "pandas>=2.3.0,<3",
  "vega-datasets>=0.9.0,<0.10",
]
lint = [
  "pandas-stubs>=2.2.3,<3",
  "ruff==0.15.12",
  "tombi==0.9.20",
  "ty==0.0.31",
  "vega-datasets>=0.9.0,<0.10",
]
test = [
  "pytest>=8.4.1,<10",
  "pytest-cov>=7.0.0,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.deptry.per_rule_ignores]
DEP004 = ["pandas", "vega_datasets", "jinja2"]
DEP002 = ["vl-convert-python"]

[tool.ruff]
target-version = "py313"
include = [
  "pyproject.toml",
  "driviz/**/*.py",
  "scripts/**/*.py",
  "tests/**/*.py",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # convention
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "N",  # pep8-naming
  "NPY",  # numpy
  "PD",  # pandas
  "RUF",  # ruff
  "PTH",  # pathlib
  "SIM",  # simplify
  "RET",  # return
  "RSE",  # raise
  "Q",  # quotes
  "G",  # logging-format
  "LOG",  # logging
  "ISC",  # implicit str concat
  "C4",  # comprehensions
  "COM",  # commas
  "TD",  # to-do
  "INT",  # gettext
  "TRY",  # tryceratops
]
ignore = [
  "E501",  # line too long, handled by black
  "C901",  # function is too complex
  "RUF013",  # implicit optional
  "ISC001",  # allow implicit str concat
  "COM812",  # allow missing trailing comma
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"driviz/cli.py" = ["B008"]
"scripts/examples/*" = ["D100"]

[tool.ruff.lint.isort]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--verbose"
filterwarnings = "error"
xfail_strict = true
testpaths = ["tests"]
markers = [
  "integration: integration tests",
]

[tool.coverage.run]
source = ["driviz"]
branch = true

[tool.ty.src]
include = [
  "driviz",
  "scripts",
  "tests",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.uv]
required-version = ">=0.9.2,<1.0"
exclude-newer = "7 days"
default-groups = [
  "ci",
  "dev",
  "lint",
  "test",
  "docs",
]
